--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav li{
       border-radius: 10%;
   }
   #projects{
-      height: auto;
+      height: 750px;
       width:1200px;
       margin-left:5px;
      /* border : 1px solid darkorchid;*/
@@ -118,6 +118,38 @@ nav li{
    color:whitesmoke;
    box-shadow: none;
 }
+#skills{
+    height:100px;
+margin-bottom: 25px;
+}
+.skillContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+   column-gap: 10px;
+   background-color:rgba(250, 249, 249, 0.87);
+   box-shadow:whitesmoke ;
+}
+#skillsBtn{
+    background-color:whitesmoke;
+    height: 50px;
+    width: 200px;
+    border-radius: 3%;
+    font-size: 1em;
+    border-color:whitesmoke;
+   color:rgb(61, 60, 60);
+   box-shadow: none;
+}
+.skillsWrapper img{
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.skillsWrapper img:hover {
+    -webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
 @media screen and (max-width: 800px) {
     header, .content{
         padding: 10px;
@@ -126,6 +158,7 @@ nav li{
     #projects{
         width:100%;
         position: relative;
+        height:2550px;
        
     }
 .projectImageContainer{
@@ -144,9 +177,18 @@ nav li{
     flex-direction: column;
     justify-items:center;
     align-items: center;
+    height:670px;
 }
 #projectBtn{
  width:100%;
+
+ margin-bottom: 5px ;
+}
+#skillsBtn{
+    width:100%;
+    padding-top: 10px;
+    margin-bottom: 5px ;
+    
 }
 }
 @media screen and (max-width: 710px){
@@ -160,6 +202,7 @@ nav li{
     header p{
     margin-top: 5px;
       }
+     
   }
   @media only screen and (max-width: 450px){
     .contentHeading{
@@ -171,4 +214,11 @@ nav li{
         font-size: 16px;
         line-height: 20px;
     }
+
+     .contentHeading{
+        font-weight: bold;
+        font-size:10px;
+      
+    }
+  
   }
